# Lavka

./: ABOUT_LAUNCH.md  CMakeLists.txt  README.md  TEST.sh  TEST_on_RL.sh  couriers_ab_output.txt  couriers_get_ab_output.txt  couriers_query_ab_output.txt  orders_ab_output.txt  orders_complete_ab_output.txt  orders_get_ab_output.txt  orders_query_ab_output.txt  post_data_couriers.json  post_data_orders.json  post_data_orders_complete.json
SERVER/: CMakeLists.txt  rebuild_main.sh  rebuild_main_without_RL_for_TEST.sh  start_main.sh  start_main_without_RL_for_TEST.sh
SERVER/src/: Dockerfile  Idempotency.cpp  Idempotency.h  RateLimit.cpp  RateLimit.h  courier_handler.cpp  courier_handler.h  main  main.cpp  main_without_RL_for_TEST  main_without_RL_for_TEST.cpp  order_handler.cpp  order_handler.h
TEST/: CMakeLists.txt
TEST/src/: MAIN_TEST_POST.cpp  Other.cpp  Other.h  TEST_GET.cpp  TEST_IDEMPOTENCE.cpp  rebiuld.sh  test_executable
configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
postgresql/schemas/: db_1.sql
src/: courier-id-handler.cpp  courier-id-handler.hpp  couriers-handler.cpp  couriers-handler.hpp  hello.cpp  hello.hpp  main.cpp  order-complete-handler.cpp  order-complete-handler.hpp  order-id-handler.cpp  order-id-handler.hpp  orders-handler.cpp  orders-handler.hpp
